Added multipliers values
